<resources>
    <string name="app_name">DnDMonsterEditor</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Fragment</string>
    <string name="second_fragment_label">Monster List Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="monsterdetailfragment">Monster Detail Fragment</string>
    <string name="holder">Place Holder</string>
    <string name="AC">AC</string>
    <string name="HP">HP</string>
    <string name="placeholderNum">00</string>
    <string name="actions">Actions</string>
    <string name="cr">CR</string>
    <string name="full_list_from_srd">Full List From SRD</string>
    <string name="modified_monsters">Modified Monsters</string>
    <string name="legendary_actions">Legendary Actions</string>
    <string name="to_hit">To Hit</string>
    <string name="damage_dice">Damage</string>
    <string name="abilities">Abilities</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="enter_name_to_save">Enter Name to Save</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="intel">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="saves">saves</string>
    <string name="d">D</string>
    <string name="plus">+</string>
    <string name="delete">Delete</string>
    <string name="deleteQuestion">"Are you sure you want to Delete this Modified Monster?\nNamed: "</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="a_d20">a D20</string>
    <string name="isSpellCaster">This monster is a spell caster, calculated CR may be innacurate use with care</string>
    <string name="dc">DC</string>
</resources>