<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MonsterDetailFragment">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AC"
        app:layout_constraintTop_toTopOf="@id/ACET"
        app:layout_constraintBottom_toBottomOf="@id/ACET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/HP"
        />

    <EditText
        android:id="@+id/ACET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderNum"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/AC"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/HP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HP"
        app:layout_constraintTop_toTopOf="@id/HPET"
        app:layout_constraintBottom_toBottomOf="@id/HPET"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/AC"
        />

    <EditText
        android:id="@+id/HPET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderNum"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/HP"
        android:inputType="number"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upperGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/abilityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:text="@string/abilities"
        app:layout_constraintTop_toTopOf="@+id/upperGuideLine"
        app:layout_constraintBottom_toBottomOf="@+id/halfUpGuideline"
        app:layout_constraintRight_toRightOf="@+id/midGuideLine1"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/abilityRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/abilityTV"
        app:layout_constraintBottom_toBottomOf="@+id/halfUpGuideline"
        app:layout_constraintRight_toRightOf="@+id/midGuideLine1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/legendaryActionsTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/legendary_actions"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/halfUpGuideline"
        app:layout_constraintBottom_toTopOf="@+id/legendaryActionsRV"
        app:layout_constraintRight_toRightOf="@+id/midGuideLine1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/legendaryActionsRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/legendaryActionsTV"
        app:layout_constraintBottom_toBottomOf="@+id/lowerGuideLine"
        app:layout_constraintRight_toRightOf="@+id/midGuideLine1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="10dp"
        />


    <TextView
        android:id="@+id/attacksTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actions"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="@+id/upperGuideLine"
        app:layout_constraintBottom_toBottomOf="@+id/lowerGuideLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/midGuideLine1"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attacksRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/attacksTV"
        app:layout_constraintBottom_toBottomOf="@+id/lowerGuideLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/midGuideLine1"
        android:layout_marginHorizontal="10dp"
        />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lowerGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfUpGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/CR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cr"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="@+id/CRET"
        app:layout_constraintBottom_toBottomOf="@+id/CRET"
        app:layout_constraintRight_toLeftOf="@id/midGuideLine1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/CRET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderNum"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/saveButton"
        app:layout_constraintLeft_toRightOf="@id/midGuideLine1"
        android:inputType="number"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>