<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/attackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holder"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/toHitTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_hit"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="@id/toHitET"
            app:layout_constraintBottom_toBottomOf="@id/toHitET"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/toHitET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderNum"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/attackName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/toHitTV"
            android:inputType="numberSigned"
            />


        <TextView
            android:id="@+id/damageDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damage_dice"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toBottomOf="@id/attackName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/diceNumber"
            app:layout_constraintLeft_toRightOf="@+id/toHitET"/>

        <EditText
            android:id="@+id/diceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderNum"
            android:inputType="number"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintTop_toBottomOf="@id/attackName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/d"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintTop_toBottomOf="@id/attackName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/diceSize"
            app:layout_constraintLeft_toLeftOf="parent"/>

            <EditText
                android:id="@+id/diceSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderNum"
                android:inputType="number"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintTop_toBottomOf="@id/attackName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/plus"
                app:layout_constraintLeft_toLeftOf="parent"
                />

        <TextView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toBottomOf="@id/attackName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bonus"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderNum"
            app:layout_constraintHorizontal_bias="1"
            android:inputType="numberSigned"
            app:layout_constraintTop_toBottomOf="@id/attackName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>